manifests/tfe/redis-standalone.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-standalone
  namespace: tfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  securityContext:
      fsGroup: 1000
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - containerPort: 6379
        command:
        - redis-server
        - "/redis-config/redis.conf"
        - "--requirepass"
        - "$(REDIS_PASSWORD)"
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1
            memory: 4Gi
        volumeMounts:
        - name: config
          mountPath: /redis-config
      volumes:
      - name: config
        configMap:
          name: redis-config
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: tfe
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
