manifests/tfe/tfe-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: terraform-enterprise
  namespace: tfe
spec:
  host: tfe.hashicorp.local
  to:
    kind: Service
    name: terraform-enterprise
    weight: 100
  port:
    targetPort: https-port
  tls:
    termination: passthrough
  wildcardPolicy: None
